# 4ok

./: .dockerignore  .env.example  .gitignore  .infisical.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  install.sh  meltano.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: publish-runtime.yml
cerbos/: config.yaml
cerbos/policies/: token_field.yaml
deploy/dagster/: dagster.yaml  definitions.py  workspace.yaml
deploy/docker/: app.Dockerfile  dagster.Dockerfile  docling-worker.Dockerfile
deploy/meltano/: meltano.yml
deploy/observability/: fourok-local-runtime-logs.json  gcb-local-runtime-logs.json  grafana-dashboards.yaml  prometheus.yaml  promtail-config.yml
deploy/runtime/: docker-compose.pinned.yml  fourok-runtime.env.example  gcb-runtime.env.example
deploy/systemd/: fourok-postgres-backup.service  (+17 more)
docker/: app.Dockerfile  dagster.Dockerfile  graphiti-runner.Dockerfile
docs/: 4ok context retrieval for AI agents.md  Practical architecture for entity identification and linking in agent context systems.md  architecture-flow.md  architecture.md  cli-shape.md  compliance.md  context-substrate-map.md  contracts.md  development.md  entity-linking-mvp.md  fourok-context-retrieval-for-ai-agents.md  goal.md  honcho-experiment.md  internal-prod.md  k3s-deployment-readiness.md  mcp-retrieval.md  operations.md  plan.md  retrieval-improvement-plan.md  review.md
reports/: 2026-06-09-live-ingestion-retrieval-deployment-verification.md  2026-06-09-local-runtime-observability-mcp-evidence.md  2026-06-09-local-runtime-observability-mcp-goal.md  2026-06-11-stage1-final-runtime-proof.md  2026-06-24-codex-mcp-feedback-agent-instructions.md  2026-06-stage1-observability-imports-evidence.md
scripts/: check-4ok-dev-all.sh  check-4ok-dev-deployment.sh  check-fourok-dev-all.sh  check-fourok-dev-deployment.sh  check_connector_contracts.py  check_dagster_pipeline.py  check_file_lengths.py  check_google_drive_live_contract.py  check_linear_live_contract.py  check_slack_live_contract.py  check_twenty_live_contract.py  diagnose-4ok-dev-runtime.sh  diagnose-fourok-dev-runtime.sh  evaluate_address_extraction.py  evaluate_document_extraction.py  evaluate_enron_pii.py  evaluate_entity_resolution.py  evaluate_retrieval.py  inspect_gmail_pilot_output.py  refresh-openviking-live-stage1-case.sh  rename_to_4ok.py  rename_to_fourok.py  run-4ok-dev-dagster-backfill.sh  run_gmail_pilot.py  run_graphiti_context_eval.py  smoke_runtime.py  ssh-4ok-dev-observability-tunnel.sh  ssh-fourok-dev-observability-tunnel.sh  verify_standalone_cli_install.sh
tests/: check-4ok-dev-all-validate.sh  check-4ok-dev-deployment-validate.sh  check-fourok-dev-all-validate.sh  check-fourok-dev-deployment-validate.sh  refresh-openviking-live-stage1-case-validate.sh  run-4ok-dev-dagster-backfill-validate.sh  run-fourok-dev-dagster-backfill-validate.sh  ssh-4ok-dev-observability-tunnel-validate.sh  ssh-fourok-dev-observability-tunnel-validate.sh  test_cli_acceptance_imports.py  test_cli_dashboard_rebuild.py  test_cli_openviking_backfill.py  test_cli_operator_status.py  test_cli_recurring_live_ingestion.py  test_cli_runtime_ops.py  test_cli_scheduler.py  test_cli_search_import.py  test_cli_shape.py  test_hypothesis_validations.py  test_live_retrieval_case_set.py  test_project_rename.py  test_retrieval_agent_experience.py
(+419 files in other folders)
