[project]
name = "4ok"
version = "0.1.0"
description = "Spike prototypes for governed company context retrieval."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mcp>=1.21.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-logging>=0.60b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b0",
    "opentelemetry-sdk>=1.39.0",
    "pgvector>=0.4.0",
    "presidio-analyzer>=2.2.360",
    "psycopg[binary]>=3.2",
    "pypdf>=6.13.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
four-ok = "fourok.cli:main"
four-ok-agent-grafana = "fourok.agent_experience.grafana:main"
four-ok-dev = "fourok.devtools.dev:main"
four-ok-mcp = "fourok.runtime.mcp_retrieval:main"
tap-fourok-fixture = "fourok.etl.extract.fixture_tap:main"
tap-fourok-google-drive = "fourok.etl.extract.google_drive_tap:main"
tap-fourok-linear = "fourok.etl.extract.linear_tap:main"
tap-fourok-twenty = "fourok.etl.extract.twenty_tap:main"
target-fourok-raw-jsonl = "fourok.etl.extract.raw_jsonl_target:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "splink>=4.0.16",
]
pipeline = [
    "dagster==1.13.8",
    "dagster-postgres==0.29.8",
    "dagster-webserver==1.13.8",
    "meltano==4.2.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fourok"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
